<resources>
    <string name="app_name">DreamCatcher</string>
    <string name="add_new_button">New Entry</string>
    <string name="history">History</string>
    <string name="dreamcatcher">DreamCatcher</string>
    <string name="settings">Settings</string>
    <string name="export_data">Export Data</string>
    <string name="Date">Date</string>
    <string name="what_did_you_dream_about">What did you dream about?</string>
    <string name="describe_your_dream">describe your dream…</string>
    <string name="rate_your_sleep">Rate Your Sleep:</string>
    <string name="how_long_did_you_sleep_for">How long did you sleep for?</string>
    <string name="save">Save</string>
    <string name="error">error</string>
    <string name="sleep_history">Sleep History</string>
    <string name="hours">Hours:</string>
    <string name="minutes">Minutes:</string>
    <string name="view_sleep">View Sleep</string>
    <string name="edit">Edit</string>
    <string name="_12_12_2012">12-12-2012</string>
    <string name="date">date</string>
    <string name="sleep_duration">Sleep Duration:</string>
    <string name="_1">1</string>
    <string name="dream_description">Dream Description:</string>
    <string name="profile">Profile</string>
    <string name="share">Share</string>
    <string name="copy_to_clipboard">Copy JSON</string>
    <string name="take_photo">take photo</string>
    <string name="interpret_your_dream">Interpret Dream</string>
    <string name="change_username">Save Username</string>
    <string name="blank_date">XXXX-XX-XX</string>
    <string name="username">username</string>
    <string name="sort_by">Sort By:</string>
    <string name="new_dream">New Dream</string>
    <string name="add_photo">Add Photo:</string>
    <string name="date_colon">Date:</string>
    <string name="sleep_image">Sleep Image</string>
    <string name="sleep_time_icon">sleep time icon</string>
    <string name="your_sleep_details">Your Sleep Details</string>
    <string name="mins">Mins:</string>
    <string name="photo">Photo:</string>
    <string name="dreamcatcher_logo">Dreamcatcher Logo</string>
    <string name="date_rating">Date Rating:</string>
    <string name="_0_100">0/100</string>
    <string name="sleep_quality">Sleep Quality:</string>
    <string name="other_user_s_sleep_details">Other User\'s Sleep Details</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="home">Home</string>

</resources>